pipeline/monarch/config/admission/namespace_guard_binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/name: monarch
    app.kubernetes.io/managed-by: kustomize
  name: namespace-guard-binding
spec:
  policyName: namespace-guard
  validationActions:
  - Deny
